interface graphique formulaire inscription

--- a/index.html
+++ b/index.html
@@ -1,10 +1,115 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-
-  </body>
+<head>
+  <meta charset="utf-8">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <title></title>
+</head>
+<body>
+  <div class="container">
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#login">
+      Inscription
+    </button>
+    <div class="modal fade" id="login" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Inscription</h4>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <form>
+                <div class="row">
+                  <div class="col-lg-offset-1 col-lg-3 text-right">
+                    <label for="pseudo">Pseudo :</label>
+                  </div>
+                  <div class="col-lg-4">
+                    <input type="text" name="pseudo" placeholder="terminator" id="pseudo">
+                  </div>
+                  <div class="col-lg-1 pseudo">
+                    <span class="glyphicon glyphicon-ok"></span>
+                    <span class="glyphicon glyphicon-remove"></span>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-offset-1 col-lg-3 text-right">
+                    <label for="age">Age :</label>
+                  </div>
+                  <div class="col-lg-4">
+                    <input type="text" name="age" placeholder="+18 ans" id="age">
+                  </div>
+                  <div class="col-lg-1 age">
+                    <span class="glyphicon glyphicon-ok"></span>
+                    <span class="glyphicon glyphicon-remove"></span>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-offset-1 col-lg-3 text-right">
+                    <label for="address">Adresse :</label>
+                  </div>
+                  <div class="col-lg-4">
+                    <input type="text" name="address" placeholder="adresse" id="address">
+                  </div>
+                  <div class="col-lg-1 address">
+                    <span class="glyphicon glyphicon-ok"></span>
+                    <span class="glyphicon glyphicon-remove"></span>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-offset-1 col-lg-3 text-right">
+                    <label for="email">E-mail :</label>
+                  </div>
+                  <div class="col-lg-4">
+                    <input type="text" name="email" placeholder="terminator@cyborg.fr" id="email">
+                  </div>
+                  <div class="col-lg-1 email">
+                    <span class="glyphicon glyphicon-ok"></span>
+                    <span class="glyphicon glyphicon-remove"></span>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-offset-1 col-lg-3 text-right">
+                    <label for="password">Mot de passe :</label>
+                  </div>
+                  <div class="col-lg-4">
+                    <input type="password" pattern=".{4,}" name="password" id="password">
+                  </div>
+                  <div class="col-lg-1 password">
+                    <span class="glyphicon glyphicon-ok"></span>
+                    <span class="glyphicon glyphicon-remove"></span>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-offset-1 col-lg-3 text-right">
+                    <label for="confirm">Confirmation :</label>
+                  </div>
+                  <div class="col-lg-4">
+                    <input type="password" pattern=".{4,}" name="confirm" id="confirm">
+                  </div>
+                  <div class="col-lg-1 confirm">
+                    <span class="glyphicon glyphicon-ok"></span>
+                    <span class="glyphicon glyphicon-remove"></span>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+            <button type="button" class="btn btn-primary" id="validForm">Ok</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+  </div>
+  <script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous">
+  </script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="js/login.js"></script>
+</body>
 </html>
