--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title></title>
 </head>
 <body>
-  <div class="container">
+  <div class="container"><!--utilisation bootstrap -->
     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#login">
       Inscription
-    </button>
+    </button><!--formulaire fenetre modale-->
     <div class="modal fade" id="login" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -20,7 +20,7 @@
           </div>
           <div class="modal-body">
             <div class="row">
-              <form>
+              <form><!--creation des champs du formulaire avec position du texte a droite-->
                 <div class="row">
                   <div class="col-lg-offset-1 col-lg-3 text-right">
                     <label for="pseudo">Pseudo :</label>
