--- a/index.html
+++ b/index.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <title>Cybergun</title>
+</head>
+<body>
+  <header>
+    <div class="container-fluid">
+      <div class="row">
+        <nav id="nav-wrap">
+          <ul id="nav" class="nav">
+            <li class="current">
+              <a class="" href="#">Répliques</a>
+              <ul class="sub-level">
+                <li><a href="#">Fusils d'assaut</a></li>
+                <li><a href="#">Fusils à pompe</a></li>
+                <li><a href="#">Pistolets</a></li>
+                <li><a href="#">Sniper</a></li>
+              </ul>
+            </li>
+            <li>
+              <a class="" href="#">Consommables</a>
+              <ul class="sub-level">
+                <li><a href="#">Billes 6mm</a></li>
+                <li><a href="#">Billes 6mm bio</a></li>
+                <li><a href="#">Bouteilles de gaz</a></li>
+                <li><a href="#">Cartouches Co2</a></li>
+              </ul>
+            </li>
+            <li>
+              <a class="" href="#">Accessoires</a>
+              <ul class="sub-level">
+                <li><a href="#">Bipied</a></li>
+                <li><a href="#">Crosse</a></li>
+                <li><a href="#">Viseurs</a></li>
+              </ul>
+            </li>
+            <li>
+              <a class="" href="#">Protections</a>
+              <ul class="sub-level">
+                <li><a href="#">Casques</a></li>
+                <li><a href="#">Gants</a></li>
+                <li><a href="#">Lunettes de protection</a></li>
+                <li><a href="#">Masques</a></li>
+                <li><a href="#">Masques intégrales</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul id="nav2" class="nav">
+            <li><a class="" href="#">Connexion</a></li>
+            <li><a class="" href="#">Inscription</a></li>
+            <li><a class="" href="#"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <div id="title" class="row">
+    <span>CyberGun</span>
+  </div>
+  <footer></footer>
+  <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script src="jquery-2.2.4.js"></script>
+  <script>
+    $(document).ready(function(){
 
-  </body>
+    });
+  </script>
+</body>
 </html>
