--- a/index.html
+++ b/index.html
@@ -150,6 +150,54 @@
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#basket">
+      Panier
+    </button><!--panier fenetre modale-->
+    <div class="modal fade" id="basket" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">Panier</h4>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <form><!--creation des champs du formulaire avec position du texte a droite-->
+                <div class="row">
+                  <div class="col-lg-offset-1 col-lg-1 text-right">
+                    <label for="item">Article</label>
+                  </div>
+                  <div class="col-lg-2"></div>
+                  <div class="col-lg-1 text-right">
+                    <label for="itemCode">Référence</label>
+                  </div>
+                  <div class="col-lg-2"></div>
+                  <div class="col-lg-1">
+                    <label for="quantity">Quantité</label>
+                    <button type="button" name="buttonUp" id="up" >+</button>
+                    <button type="button" name="buttonDown" id="down" >-</button>
+                  </div>
+                  <div class="col-lg-2"></div>
+                  <div class="col-lg-1">
+                    <label for="price">Prix</label>
+                  </div>
+                  <div class="col-lg-2"></div>
+                  <div class="row">
+                    <div class="col-lg-offset-6 col-lg-1">
+                      <label for="count">Total</label>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+            <button type="button" class="btn btn-primary" id="validForm">Ok</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
   </div>
   <script
   src="https://code.jquery.com/jquery-2.2.4.min.js"
