--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Cybergun</title>
 </head>
 <body>
@@ -13,39 +14,39 @@
         <nav id="nav-wrap">
           <ul id="nav" class="nav">
             <li class="current">
-              <a class="" href="#">Répliques</a>
+              <a class="repliques" href="#">Répliques</a>
               <ul class="sub-level">
-                <li><a href="#">Fusils d'assaut</a></li>
-                <li><a href="#">Fusils à pompe</a></li>
-                <li><a href="#">Pistolets</a></li>
-                <li><a href="#">Sniper</a></li>
+                <li><a class="repliques" href="#" id="fusilAssaut">Fusils d'assaut</a></li>
+                <li><a class="repliques" href="#" id="fusilPompe">Fusils à pompe</a></li>
+                <li><a class="repliques" href="#" id="pistolet">Pistolets</a></li>
+                <li><a class="repliques" href="#" id="sniper">Sniper</a></li>
               </ul>
             </li>
             <li>
-              <a class="" href="#">Consommables</a>
+              <a class="consommables" href="#">Consommables</a>
               <ul class="sub-level">
-                <li><a href="#">Billes 6mm</a></li>
-                <li><a href="#">Billes 6mm bio</a></li>
-                <li><a href="#">Bouteilles de gaz</a></li>
-                <li><a href="#">Cartouches Co2</a></li>
+                <li><a class="consommables" href="#" id="bille6mm">Billes 6mm</a></li>
+                <li><a class="consommables" href="#" id="bille6mmbio">Billes 6mm bio</a></li>
+                <li><a class="consommables" href="#" id="bouteilleGaz">Bouteilles de gaz</a></li>
+                <li><a class="consommables" href="#" id="cartoucheCo2">Cartouches Co2</a></li>
               </ul>
             </li>
             <li>
-              <a class="" href="#">Accessoires</a>
+              <a class="accessoires" href="#">Accessoires</a>
               <ul class="sub-level">
-                <li><a href="#">Bipied</a></li>
-                <li><a href="#">Crosse</a></li>
-                <li><a href="#">Viseurs</a></li>
+                <li><a class="accessoires" href="#" id="bipied">Bipied</a></li>
+                <li><a class="accessoires" href="#" id="crosse">Crosse</a></li>
+                <li><a class="accessoires" href="#" id="lunetteVisée">Viseurs</a></li>
               </ul>
             </li>
             <li>
-              <a class="" href="#">Protections</a>
+              <a class="protections" href="#">Protections</a>
               <ul class="sub-level">
-                <li><a href="#">Casques</a></li>
-                <li><a href="#">Gants</a></li>
-                <li><a href="#">Lunettes de protection</a></li>
-                <li><a href="#">Masques</a></li>
-                <li><a href="#">Masques intégrales</a></li>
+                <li><a class="protections" href="#" id="casque">Casques</a></li>
+                <li><a class="protections" href="#" id="gants">Gants</a></li>
+                <li><a class="protections" href="#" id="lunettes">Lunettes de protection</a></li>
+                <li><a class="protections" href="#" id="masque">Masques</a></li>
+                <li><a class="protections" href="#" id="masqueIntegral">Masques intégrales</a></li>
               </ul>
             </li>
           </ul>
@@ -60,6 +61,9 @@
   </header>
   <div id="title" class="row">
     <span>CyberGun</span>
+  </div>
+  <div class="row" id="content">
+
   </div>
   <div class="container"><!--utilisation bootstrap -->
     <div class="modal fade" id="signIn" tabindex="-1" role="dialog">
@@ -213,5 +217,6 @@
   crossorigin="anonymous">
   </script>
   <script src="js/login.js"></script>
+  <script src="js/content.js"></script>
 </body>
 </html>
