panier avec bouton

--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
                 <div class="row">
                   <div class="col-lg-offset-1 col-lg-1 text-right">
                     <label for="item">Article</label>
+                    <button type="button" class="btn btn-default btn-sm" name="trashButton"id="trash">
+                      <span class="glyphicon glyphicon-trash"></span></button>
                   </div>
                   <div class="col-lg-2"></div>
                   <div class="col-lg-1 text-right">
@@ -174,8 +176,8 @@
                   <div class="col-lg-2"></div>
                   <div class="col-lg-1">
                     <label for="quantity">Quantité</label>
-                    <button type="button" name="buttonUp" id="up" >+</button>
-                    <button type="button" name="buttonDown" id="down" >-</button>
+                    <button type="button" name="buttonUp" id="buttonUp" >+</button>
+                    <button type="button" name="buttonDown" id="buttonDown" >-</button>
                   </div>
                   <div class="col-lg-2"></div>
                   <div class="col-lg-1">
@@ -193,7 +195,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-            <button type="button" class="btn btn-primary" id="validForm">Ok</button>
+            <button type="button" class="btn btn-primary" id="validForm">Valider</button>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
