Ajout d'un stockage des articles ajuté au panier

--- a/index.html
+++ b/index.html
@@ -218,5 +218,6 @@
   </script>
   <script src="js/login.js"></script>
   <script src="js/content.js"></script>
+  <script src="js/addToCart.js"></script>
 </body>
 </html>
