fenetre panier ajustée

--- a/index.html
+++ b/index.html
@@ -213,29 +213,40 @@
             <div class="row">
               <form><!--creation des champs du formulaire avec position du texte a droite-->
                 <div class="row">
-                  <div class="col-lg-offset-1 col-lg-1 text-right">
-                    <label for="item">Article</label>
-                    <button type="button" class="btn btn-default btn-sm" name="trashButton"id="trash">
+                  <div class="col-lg-3 text-center">
+                    <label for="item">Articles</label>
+                    <ul class="list-unstyled text-center">
+                      <li>pistolet</li>
+                    </ul>
+                    <button type="button" class="btn btn-default btn-sm" name="trashButton" id="trash">
                       <span class="glyphicon glyphicon-trash"></span></button>
                     </div>
-                    <div class="col-lg-2"></div>
-                    <div class="col-lg-1 text-right">
+                    <div class="col-lg-3 text-center">
                       <label for="itemCode">Référence</label>
+                      <ul class="list-unstyled text-center">
+                        <li>01</li>
+                      </ul>
                     </div>
-                    <div class="col-lg-2"></div>
-                    <div class="col-lg-1">
+                    <div class="col-lg-3 text-center">
                       <label for="quantity">Quantité</label>
-                      <button type="button" name="buttonUp" id="buttonUp" >+</button>
-                      <button type="button" name="buttonDown" id="buttonDown" >-</button>
+                      <ul class="list-unstyled text-center">
+                        <li>1</li>
+                      </ul>
+                      <button type="button" name="buttonUp" id="buttonUp">+</button>
+                      <button type="button" name="buttonDown" id="buttonDown">-</button>
                     </div>
-                    <div class="col-lg-2"></div>
-                    <div class="col-lg-1">
+                    <div class="col-lg-3 text-center">
                       <label for="price">Prix</label>
+                      <ul class="list-unstyled text-center">
+                        <li>595 Fr</li>
+                      </ul>
                     </div>
-                    <div class="col-lg-2"></div>
                     <div class="row">
-                      <div class="col-lg-offset-6 col-lg-1">
+                      <div class="col-lg-offset-9 col-lg-2 text-center">
                         <label for="count">Total</label>
+                        <ul class="list-unstyled text-center">
+                          <li>595 Fr</li>
+                        </ul>
                       </div>
                     </div>
                   </div>
